--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <center>
-    <canvas id="game-canvas"></canvas>
+    <canvas id="game-board"></canvas>
   </center>
   <script src="./script.js"></script>
 </body>
